# qrage

./: .pre-commit-config.yaml  CITATION.cff  QRAGE.bib  README.md  pyproject.toml
notebooks/: mege-pulseq.ipynb  qrage-pulseq.ipynb
src/qrage/sequence/: __init__.py  inversion.py  mege.py  qrage.py  readout.py  sampling.py
